force-app/main/default/objects/KimbleOne__CreditAllocationItem__c/KimbleOne__CreditAllocationItem__c.object-meta.xml
<CustomObject>
    <label>Credit Allocation Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Credit Allocation Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Allocation Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>