force-app/main/default/objects/KimbleOne__CreditAllocationItem__c/fields/KimbleOne__AllocatedUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllocatedUnits__c</fullName>
    <label>Allocated Units</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>