force-app/main/default/objects/KimbleOne__CreditAllocationItem__c/fields/KimbleOne__AllocatedValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllocatedValue__c</fullName>
    <label>Allocated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>