force-app/main/default/objects/KimbleOne__CreditAllocationItem__c/fields/KimbleOne__CreditAllocation__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreditAllocation__c</fullName>
    <label>Credit Allocation</label>
    <referenceTo>KimbleOne__CreditAllocation__c</referenceTo>
    <relationshipLabel>Credit Allocation Items</relationshipLabel>
    <relationshipName>CreditAllocationItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>