force-app/main/default/objects/KimbleOne__CreditAllocationItem__c/fields/KimbleOne__RemainingValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RemainingValue__c</fullName>
    <label>Remaining Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>